--- a/MotionStreamApp/app/src/main/res/menu/menu_main.xml
+++ b/MotionStreamApp/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Stream" />
+    <!--<item android:title="Stream" /> -->
     <item
         android:icon="@android:drawable/ic_menu_manage"
-        android:title="Options"
+        android:title="Settings"
+        android:onClick="settings_OnClick"
         app:showAsAction="withText" />
 </menu>
