--- a/MotionStreamApp/app/src/main/res/layout/activity_main.xml
+++ b/MotionStreamApp/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,19 @@
         android:id="@+id/buttonStop"
         android:layout_width="94dp"
         android:layout_height="44dp"
-        android:layout_marginStart="156dp"
-        android:layout_marginLeft="156dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginLeft="148dp"
         android:layout_marginTop="8dp"
         android:onClick="stop_onClick"
         android:text="Stop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/videoFeed" />
+        app:layout_constraintTop_toBottomOf="@+id/simple_player" />
 
+    <!--
     <VideoView
         android:id="@+id/videoFeed"
-        android:layout_width="364dp"
-        android:layout_height="485dp"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="12dp"
@@ -30,6 +31,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+        -->
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/simple_player"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="0dp">
+
+    </com.google.android.exoplayer2.ui.PlayerView>
 
     <TextView
         android:id="@+id/textView"
@@ -46,11 +57,11 @@
         android:id="@+id/buttonStart"
         android:layout_width="94dp"
         android:layout_height="44dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="8dp"
         android:onClick="start_onClick"
         android:text="Start"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/videoFeed" />
+        app:layout_constraintTop_toBottomOf="@+id/simple_player" />
 </android.support.constraint.ConstraintLayout>
