Implemented cancel options for settings tab. Small bugfixes and improvements.

--- a/MotionStreamApp/app/src/main/res/menu/menu_settings.xml
+++ b/MotionStreamApp/app/src/main/res/menu/menu_settings.xml
@@ -7,5 +7,6 @@
         app:showAsAction="withText"
         android:onClick="apply_onClick"/>
 
-    <item android:title="Cancel" />
+    <item android:title="Cancel"
+        android:onClick="cancel_onClick"/>
 </menu>
