--- a/MotionStreamApp/app/src/main/res/menu/menu_main.xml
+++ b/MotionStreamApp/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,8 @@
         android:title="Settings"
         android:onClick="settings_OnClick"
         app:showAsAction="withText" />
+    <item android:icon="@android:drawable/ic_menu_manage"
+        android:title="Notification"
+        android:onClick="notify_OnClick"
+        app:showAsAction="withText" />
 </menu>
