Changed fragment stuff

--- a/MotionStream/app/src/main/res/layout/activity_main.xml
+++ b/MotionStream/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <SurfaceView
-        android:id="@+id/surface"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center"
+
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.posseggs.motionstream.Stream"
+        android:layout_width="414dp"
+        android:layout_height="734dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </android.support.constraint.ConstraintLayout>
