--- a/MotionStream/app/src/main/res/layout/activity_main.xml
+++ b/MotionStream/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
     <fragment
-        android:id="@+id/fragment"
+        android:id="@+id/streamFragment"
         android:name="com.posseggs.motionstream.Stream"
         android:layout_width="414dp"
         android:layout_height="734dp"
@@ -20,5 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+    />
 </android.support.constraint.ConstraintLayout>
